--- a/templates/experiment/new.html
+++ b/templates/experiment/new.html
@@ -390,10 +390,10 @@
                 if (res.data.message == "ok")
                   alert("Ok! A new experiment was created");
                 else
-                  alert("An error was occured");
+                  alert("An Error Occured");
               }).catch(function (err) {
                 console.log(err);
-                alert("An error was occured");
+                alert("An Error Occured");
               });
             }
             e.preventDefault();
