--- a/templates/material/nmodify.html
+++ b/templates/material/nmodify.html
@@ -352,10 +352,10 @@
                 if (res.data.message == "ok")
                   alert("Ok! The material was modified");
                 else
-                  alert("An error was occured");
+                  alert("An Error Occured");
               }).catch(function (err) {
                 console.log(err);
-                alert("An error was occured");
+                alert("An Error Occured");
               });
             }
             e.preventDefault();
