--- a/templates/rotating/modify.html
+++ b/templates/rotating/modify.html
@@ -279,12 +279,24 @@
                       <!-- input v-model="rotating.stress" class="form-control" id="stress" type="numeric" -->
                       <p></p><span>[[ rotating.stress ]]</span></p>
                       
-                    <label for="rotating.runoutcycles">Run Out Cycles</label>
-                    <input v-model="rotating.runoutcycles" class="form-control" id="runoutcycles" type="numeric">
-
-                    <label for="rotating.runouttime">Run Out Time</label>
-                    <input v-model="rotating.runouttime" class="form-control" id="runouttime" type="numeric">
-
+                      <label for="rotating.runoutcycles">Run Out Cycles</label>
+                      <select v-model="rotating.runoutcycles" class="form-control" id="runoutcycles" >
+                        <option value="0">Please Select :</option>
+                        <option value="1">1E6</option>
+                        <option value="2">3E6</option>
+                        <option value="3">1E7</option>
+                        <option value="4">5E7</option>
+                      </select>
+  
+                      <label for="rotating.runouttime">Run Out Time</label>
+                      <select v-model="rotating.runouttime" class="form-control" id="runouttime" >
+                        <option value="0">Please Select :</option>
+                        <option value="1">NULL</option>
+                        <option value="2">1</option>
+                        <option value="3">2</option>
+                        <option value="4">3</option>
+                      </select>
+  
                     <label for="rotating.description">Description</label>
                     <input v-model="rotating.description" class="form-control" id="description" type="textarea">
 
@@ -398,24 +410,39 @@
             return result;
           },
           completedForm: function() {
-            return true;
+            result = this.mustBeString(this.rotating.sname, "Specimen Name");
+            result = result & this.grateThanZero(this.rotating.mid, "Material");
+            result = result & this.grateThanZero(this.rotating.diameter,      "Diameter");
+            result = result & this.grateThanZero(this.rotating.moment,        "Moment");
+            result = result & this.mustBeNumeric(this.rotating.FatigueLifeNf, "Fatigue Life Nf");
+            result = result & this.mustBeNumeric(this.rotating.FracturedLocs, "Fractured Locs");
+            result = result & this.mustBeNumeric(this.rotating.speed,         "Speed");
+            // result = result & this.mustBeNumeric(this.rotating.lp,            "lp");
+            // result = result & this.mustBeNumeric(this.rotating.stress,        "Stress");
+            result = result & this.grateThanZero(this.rotating.runoutcycles,  "Run Out Cycles");
+            result = result & this.grateThanZero(this.rotating.runouttime,    "Run Out Time");
+            // result = result & this.mustBeNumeric(this.rotating.description,   "Description");
+            // result = result & this.mustBeNumeric(this.rotating.pic1,          "Pic1");
+            // result = result & this.mustBeNumeric(this.rotating.pic2,          "Pic2");
+            // result = result & this.mustBeNumeric(this.rotating.pic3,          "Pic3");
+            return result;
           },
-          checkRotating: function (e) {            
+          checkRotating: function (e) {
             this.errors = [];
             if (this.completedForm() == true) {
-              console.log(this.rotating);
+              // console.log(this.rotating);
               axios
               .post('/updatert', this.rotating)
               .then(res => {
                 console.log(res.data);
                 if (res.data.message == "ok") {
-                  alert("Ok! A new test was modified");
+                  alert("Ok! The test was modified");
                 } else {
-                  alert("an error was occured");
+                  alert("An error occured");
                 }
               }).catch(function (err) {
                 console.log(err);
-                alert("an error was occured");
+                alert("An error occured");
               });
             }
             e.preventDefault();
@@ -466,7 +493,6 @@
           .get('/rotating/{{ rtid }}')
           .then(res => {
             this.rotating = res.data;
-            // console.log(this.exp);
           })
           .catch(err => {
             console.log(err);
