--- a/templates/specimen/list.html
+++ b/templates/specimen/list.html
@@ -326,7 +326,7 @@
                   alert("the speicimen (id = " + sid + ") was deteleted");
                   window.location.reload(true);
                 } else {
-                  alert("An error was occured!");
+                  alert("An Error Occured!");
                 }
               })
               .catch(err => {
