--- a/templates/torsion/list.html
+++ b/templates/torsion/list.html
@@ -11,7 +11,7 @@
     <base href="/">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewpotrs" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <meta name="description" content="BIT Cloud Lab">
     <meta name="author" content="Łukasz Holeczek">
     <meta name="keyword" content="Bootstrap,Admin,Template,Open,Source,jQuery,CSS,HTML,RWD,Dashboard">
@@ -342,7 +342,7 @@
                   alert("the torsion test (id = " + torsion_id + ") was deteleted");
                   window.location.reload(true);
                 } else {
-                  aletrs("An error was occured!");
+                  aletrs("An Error Occured!");
                 }
               })
               .catch(err => {
