--- a/templates/torsion/modify.html
+++ b/templates/torsion/modify.html
@@ -62,7 +62,7 @@
           </a>
         </li>
         <li class="c-sidebar-nav-item c-sidebar-nav-dropdown">
-          <a class="c-sidebar-nav-link" href="torsion/list">
+          <a class="c-sidebar-nav-link" href="rotating/list">
             <svg class="c-sidebar-nav-icon">
               <use xlink:href="vendors/@coreui/icons/svg/free.svg#cil-pencil"></use>
             </svg> Rotating Bending
@@ -240,7 +240,7 @@
                   <i class="fa fa-align-justify"> </i> Modify The Torsion Test
                 </div>
                 <div class="card-body">
-                  <form id = "update_rotating">
+                  <form id = "update_torsion">
                     <div v-if="errors.length > 0" class="card-body">
                       <div v-for="error in errors" :key="error.message" class="alert alert-danger" role="alert">[[ error.message ]]</div>
                     </div>
@@ -260,7 +260,7 @@
                     <input v-model="torsion.diameter" class="form-control" id="diameter" type="numeric">
 
                     <label for="torsion.tlen">Length(mm)</label>
-                    <input v-model="torsion.tlen" class="form-control" id="moment" type="numeric">
+                    <input v-model="torsion.tlen" class="form-control" id="moment" type="numeric" @input="calStress">
 
                     <label for="torsion.max_torque">Max Torque(Nm)</label>
                     <input v-model="torsion.max_torque" class="form-control" id="moment" type="numeric" @input="calStress">
@@ -269,10 +269,10 @@
                     <input v-model="torsion.min_torque" class="form-control" id="moment" type="numeric">
 
                     <label for="torsion.max_theta">Max Theta(rad)</label>
-                    <input v-model="torsion.max_theta" class="form-control" id="moment" type="numeric"  @input="calStress">
+                    <input v-model="torsion.max_theta" class="form-control" id="moment" type="numeric">
 
                     <label for="torsion.min_theta">Min Theta(rad)</label>
-                    <input v-model="torsion.min_theta" class="form-control" id="moment" type="numeric"  @input="calStress">
+                    <input v-model="torsion.min_theta" class="form-control" id="moment" type="numeric">
 
                     <p><label for="torsion.stress">Stress(MPa)</label></p>
                     <!-- input v-model="torsion.stress" class="form-control" id="stress" type="numeric" -->
@@ -285,10 +285,22 @@
                     <input v-model="torsion.FracturedLocs" class="form-control" id="FracturedLocs" type="numeric">
                                         
                     <label for="torsion.runoutcycles">Run Out Cycles</label>
-                    <input v-model="torsion.runoutcycles" class="form-control" id="runoutcycles" type="numeric">
+                    <select v-model="torsion.runoutcycles" class="form-control" id="runoutcycles" >
+                      <option value="0">Please Select :</option>
+                      <option value="1">1E6</option>
+                      <option value="2">3E6</option>
+                      <option value="3">1E7</option>
+                      <option value="4">5E7</option>
+                    </select>
 
                     <label for="torsion.runouttime">Run Out Time</label>
-                    <input v-model="torsion.runouttime" class="form-control" id="runouttime" type="numeric">
+                    <select v-model="torsion.runouttime" class="form-control" id="runouttime" >
+                      <option value="0">Please Select :</option>
+                      <option value="1">NULL</option>
+                      <option value="2">1</option>
+                      <option value="3">2</option>
+                      <option value="4">3</option>
+                    </select>
 
                     <label for="torsion.description">Description</label>
                     <input v-model="torsion.description" class="form-control" id="description" type="textarea">
@@ -330,7 +342,7 @@
 
     <script type="text/javascript" language="JavaScript">
       var vue_trs = new Vue({
-        el: "#update_rotating",
+        el: "#update_torsion",
         data: {
           errors: [],
           torsion: {
@@ -407,18 +419,18 @@
             result = true;
             result = result & this.mustBeString(this.torsion.sname, "Specimen Name");
             result = result & this.grateThanZero(this.torsion.mid, "Material");
-            result = result & this.mustBeNumeric(this.torsion.diameter,      "Diameter");
-            result = result & this.mustBeNumeric(this.torsion.tlen,          "Length");
-            result = result & this.mustBeNumeric(this.torsion.max_torque,    "Max Torque");
+            result = result & this.grateThanZero(this.torsion.diameter,      "Diameter");
+            result = result & this.grateThanZero(this.torsion.tlen,          "Length");
+            result = result & this.grateThanZero(this.torsion.max_torque,    "Max Torque");
             result = result & this.mustBeNumeric(this.torsion.min_torque,         "Min Torque");
-            result = result & this.mustBeNumeric(this.torsion.max_theta,         "Max Theta");
+            result = result & this.grateThanZero(this.torsion.max_theta,         "Max Theta");
             result = result & this.mustBeNumeric(this.torsion.min_theta,         "Min Theta");
             result = result & this.mustBeNumeric(this.torsion.FatigueLifeNf, "Fatigue Life Nf");
             result = result & this.mustBeNumeric(this.torsion.FracturedLocs, "Fractured Locs");
             // result = result & this.mustBeNumeric(this.torsion.lp,            "lp");
             // result = result & this.mustBeNumeric(this.torsion.stress,        "Stress");
-            result = result & this.mustBeNumeric(this.torsion.runoutcycles,  "Run Out Cycles");
-            result = result & this.mustBeNumeric(this.torsion.runouttime,    "Run Out Time");
+            result = result & this.grateThanZero(this.torsion.runoutcycles,  "Run Out Cycles");
+            result = result & this.grateThanZero(this.torsion.runouttime,    "Run Out Time");
             // result = result & this.mustBeNumeric(this.torsion.description,   "Description");
             // result = result & this.mustBeNumeric(this.torsion.pic1,          "Pic1");
             // result = result & this.mustBeNumeric(this.torsion.pic2,          "Pic2");
@@ -437,11 +449,11 @@
                 if (res.data.message == "ok") {
                   alert("Ok! A new test was modified");
                 } else {
-                  alert("an error was occured");
+                  alert("An Error Occured");
                 }
               }).catch(function (err) {
                 console.log(err);
-                alert("an error was occured");
+                alert("An Error Occured");
               });
             }
             e.preventDefault();
@@ -468,14 +480,12 @@
             this.torsion.pic3          = "";
             e.preventDefault();
           },
-          calLz: function() {
-            console.log(this.torsion.diameter);
-            this.torsion.lp = 1/64.0*3.14159265*this.torsion.diameter*this.torsion.diameter*this.torsion.diameter*this.torsion.diameter;
-            console.log(this.torsion.lp);
-          },
           calStress: function() {
-            if (this.torsion.lp != 0) {
-              this.torsion.stress = 1000 * .5*this.torsion.diameter*this.torsion.moment/this.torsion.lp;
+            if (this.torsion.diameter != 0) {
+              var r = this.torsion.diameter / 2;
+              // var lp = .5 * 3.14159265 * r * r * r * r;
+              // this.torsion.stress = this.torsion.max_torque * r / lp;
+              this.torsion.stress = 1000 * this.torsion.max_torque / (.5 * 3.1415926535897932384 * r * r * r);
             }
           }
         },
