--- a/templates/experiment/modify.html
+++ b/templates/experiment/modify.html
@@ -392,10 +392,10 @@
                 if (res.data.message == "ok")
                   alert("Ok! The experiment was modified");
                 else
-                  alert("an error was occured");
+                  alert("An Error Occured");
               }).catch(function (err) {
                 console.log(err);
-                alert("an error was occured");
+                alert("An Error Occured");
               });
             }
             e.preventDefault();
