--- a/templates/material/new.html
+++ b/templates/material/new.html
@@ -352,7 +352,7 @@
                 if (res.data.message == "ok")
                   alert("Ok! A new material was created");
                 else
-                  alert("an error was occured");
+                  alert("An Error Occured");
               }).catch(function (err) {
                 console.log(err);
                 alert("bad");
