--- a/templates/specimen/nmodify.html
+++ b/templates/specimen/nmodify.html
@@ -363,10 +363,10 @@
                 if (res.data.message == "ok")
                   alert("Ok! The specimen was modified");
                 else
-                  alert("An error was occured");
+                  alert("An Error Occured");
               }).catch(function (err) {
                 console.log(err);
-                alert("An error was occured");
+                alert("An Error Occured");
               });
             }
             e.preventDefault();
