--- a/templates/tension/new.html
+++ b/templates/tension/new.html
@@ -39,9 +39,9 @@
     <script src="/js/axios.min.js"></script>
     <script src="/js/vue-cookies.js"></script>
     <script src="/js/cloudlab.js"></script>
-    <!-- script type="text/javascript" language="JavaScript">
-      verify_token();
-    </script -->
+    <link href="/css/uploadfile.css" rel="stylesheet">
+    <script src="/js/jquery-1.10.1.min.js"></script>
+    <script src="/js/jquery.uploadfile.min.js"></script>
   </head>
   <body class="c-app">
     <!-- start left menu --> 
@@ -56,13 +56,6 @@
             <svg class="c-sidebar-nav-icon">
               <use xlink:href="vendors/@coreui/icons/svg/free.svg#cil-speedometer"></use>
             </svg> Dashboard
-          </a>
-        </li>
-        <li class="c-sidebar-nav-item c-sidebar-nav-dropdown">
-          <a class="c-sidebar-nav-link" href="experiment/list">
-            <svg class="c-sidebar-nav-icon">
-              <use xlink:href="vendors/@coreui/icons/svg/free.svg#cil-pencil"></use>
-            </svg> LCF
           </a>
         </li>
         <li class="c-sidebar-nav-item c-sidebar-nav-dropdown">
@@ -91,6 +84,13 @@
             <svg class="c-sidebar-nav-icon">
               <use xlink:href="vendors/@coreui/icons/svg/free.svg#cil-pencil"></use>
             </svg> Tooth Bending
+          </a>
+        </li>
+        <li class="c-sidebar-nav-item c-sidebar-nav-dropdown">
+          <a class="c-sidebar-nav-link" href="experiment/list">
+            <svg class="c-sidebar-nav-icon">
+              <use xlink:href="vendors/@coreui/icons/svg/free.svg#cil-pencil"></use>
+            </svg> LCF
           </a>
         </li>
         <li class="c-sidebar-nav-item c-sidebar-nav-dropdown">
@@ -220,8 +220,8 @@
           <!-- Breadcrumb-->
           <ol class="breadcrumb border-0 m-0">
             <li class="breadcrumb-item"><a href="main">Home</a></li>
-            <li class="breadcrumb-item"><a href="specimen/list">Specimen List</a></li>
-            <li class="breadcrumb-item active">New Specimen</li>
+            <li class="breadcrumb-item"><a href="tension/list">Tension Test List</a></li>
+            <li class="breadcrumb-item active">New Tension Test</li>
             <!-- Breadcrumb Menu-->
           </ol>
         </div>
@@ -234,32 +234,91 @@
             <div class="fade-in">
               <div class="card">
                 <div class="card-header">
-                  <i class="fa fa-align-justify"> </i> Create A New Specimen 
+                  <i class="fa fa-align-justify"> </i> New Tension Test
                 </div>
                 <div class="card-body">
-                  <form id = "new_spc">
+                  <form id = "new_tension">
                     <div v-if="errors.length > 0" class="card-body">
                       <div v-for="error in errors" :key="error.message" class="alert alert-danger" role="alert">[[ error.message ]]</div>
-                    </div> 
-                    <label for="spc.sname">Specimen Name</label>
-                    <input v-model="spc.sname" class="form-control" id="sname" type="text">
+                    </div>
 
-                    <label for="spc.radius">Radius</label>
-                    <input v-model="spc.radius" class="form-control" id="radius" type="numeric">
-                    
-                    <label for="spc.length">Length</label> <input v-model="spc.length" class="form-control" id="length" type="numeric">
-                    <label for="spc.mid">Material    </label> <br>
-                    <select v-model="spc.mid" class="form-control">
+                    <label for="tension.sname">Specimen Name</label>
+                    <input v-model="tension.sname" class="form-control" id="sname" type="text">
+
+                    <label for="tension.mid">Material</label>
+                    <select v-model="tension.mid" class="form-control">
                       <option value="0">Please Select A Material</option>
                       <option v-for="material in materials" v-bind:value="material.mid">
                         [[ material.mname ]]
                     </option>
                     </select>
-                    <label for="spc.memo">Memo</label>
-                    <input v-model="spc.memo" class="form-control" id="memo" type="textarea">
+
+                    <label for="tension.diameter">Diameter(mm)</label>
+                    <input v-model="tension.diameter" class="form-control" id="diameter" type="numeric">
+
+                    <label for="tension.ktfactor">Kt Factor</label>
+                    <select v-model="tension.ktfactor" class="form-control" id="ktfactor" >
+                      <option value="0">Please Select :</option>
+                      <option value="1">Smooth</option>
+                      <option value="2">2</option>
+                      <option value="3">3</option>
+                      <option value="4">4</option>
+                    </select>
+
+                    <label for="tension.meanload">Mean Load(KN)</label>
+                    <input v-model="tension.meanload" class="form-control" id="moment" type="numeric">
+
+                    <label for="tension.maxload">Max Load(KN)</label>
+                    <input v-model="tension.maxload" class="form-control" id="moment" type="numeric" @input="calStress">
+
+                    <label for="tension.ampload">Amp Load(KN)</label>
+                    <input v-model="tension.ampload" class="form-control" id="moment" type="numeric"  @input="calStress">
+
+                    <label for="tension.ratioofload">Ratio Of Load</label>
+                    <input v-model="tension.ratioofload" class="form-control" id="moment" type="numeric"  @input="calStress">
+
+                    <label for="tension.FatigueLifeNf">Fatigue Life Nf</label>
+                    <input v-model="tension.FatigueLifeNf" class="form-control" id="FatigueLifeNf" type="numeric">
+                    
+                    <label for="tension.FracturedLocs">FracturedLocs</label>
+                    <input v-model="tension.FracturedLocs" class="form-control" id="FracturedLocs" type="numeric">
+                                        
+                    <label for="tension.runoutcycles">Run Out Cycles</label>
+                    <select v-model="tension.runoutcycles" class="form-control" id="runoutcycles" >
+                      <option value="0">Please Select :</option>
+                      <option value="1">1E6</option>
+                      <option value="2">3E6</option>
+                      <option value="3">1E7</option>
+                      <option value="4">5E7</option>
+                    </select>
+
+                    <label for="tension.runouttime">Run Out Time</label>
+                    <select v-model="tension.runouttime" class="form-control" id="runouttime" >
+                      <option value="0">Please Select :</option>
+                      <option value="1">NULL</option>
+                      <option value="2">1</option>
+                      <option value="3">2</option>
+                      <option value="4">3</option>
+                    </select>
+
+                    <label for="tension.description">Description</label>
+                    <input v-model="tension.description" class="form-control" id="description" type="textarea">
+
+                    <label for="tension.pic1">Picture. Fractured Surfaces On Left</label><p>
+                    <div id="upload_pic1">Upload</div>
+                    <div id="status_1"></div></p>
+                     
+                    <label for="tension.pic2">Picture. Fractured Surfaces On Right</label><p>
+                    <div id="upload_pic2">Upload</div>
+                    <div id="status_2"></div></p>
+
+                    <label for="tension.pic3">Picture. Axis Direction</label><p>
+                    <div id="upload_pic3">Upload</div>
+                    <div id="status_3"></div></p>
+
                     <div class="card-footer">
-                      <button class="btn btn-sm btn-primary" type="button" v-on:click="checkSpc">Create</button>
-                      <button class="btn btn-sm btn-danger" type="button" v-on:click="resetSpc">Reset</button>
+                      <button class="btn btn-sm btn-primary" type="button" v-on:click="checkTension">Create</button>
+                      <button class="btn btn-sm btn-danger" type="button" v-on:click="resetTension">Reset</button>
                     </div>
                   </form>
                 </div>
@@ -277,21 +336,32 @@
     <script src="/vendors/@coreui/icons/js/svgxuse.min.js"></script>
     <!--<![endif]-->
     <!-- Plugins and scripts required by this view-->
-    <script src="/vendors/@coreui/chartjs/js/coreui-chartjs.bundle.js"></script>
+    <!-- script src="/vendors/@coreui/chartjs/js/coreui-chartjs.bundle.js"></script -->
     <script src="/vendors/@coreui/utils/js/coreui-utils.js"></script>
 
     <script type="text/javascript" language="JavaScript">
-      var specimen = new Vue({
-        el: "#new_spc",
+      var newtns = new Vue({
+        el: "#new_tension",
         data: {
           errors: [],
-          spc: {
-            sid: 0,
-            sname: "",
-            mid: 0,
-            radius: 0,
-            length: 0,
-            memo: ""
+          tension: {
+            tension_id    : 0,
+            sname         : "",
+            mid           : 0,
+            diameter      : 0,
+            meanload      : 0,
+            maxload       : 0,
+            FatigueLifeNf : 0,
+            FracturedLocs : 0,
+            ktfactor      : 0,
+            ampload       : 0,
+            ratioofload   : 0,
+            runoutcycles  : 0,
+            runouttime    : 0,
+            description   : "",
+            pic1          : "",
+            pic2          : "",
+            pic3          : ""
           },
           materials: []
         },
@@ -345,42 +415,70 @@
             return result;
           },
           completedForm: function() {
-            result = this.mustBeString(this.spc.sname, "Specimen Name");
-            // .exp.sampling && this.exp.cycles && this.exp.datatype && this.exp.datapath && this.exp.rawpath && this.exp.sid > 0)
-            result = result & this.grateThanZero(this.spc.radius, 'Radius');
-            result = result & this.grateThanZero(this.spc.length, 'Length');
-            result = result & this.mustInRange(this.spc.mid, 1, this.materials.length, 'Material');
+            result = true;
+            result = result & this.mustBeString(this.tension.sname, "Specimen Name");
+            result = result & this.grateThanZero(this.tension.mid,  "Material");
+            result = result & this.grateThanZero(this.tension.diameter,      "Diameter");
+            result = result & this.mustBeNumeric(this.tension.meanload,          "Mean Load");
+            result = result & this.mustBeNumeric(this.tension.maxload,    "Max Load");
+            result = result & this.mustBeNumeric(this.tension.FatigueLifeNf, "Fatigue Life Nf");
+            result = result & this.mustBeNumeric(this.tension.FracturedLocs, "Fractured Locs");
+            // result = result & this.mustBeNumeric(this.tension.lp,            "lp");
+            // result = result & this.mustBeNumeric(this.tension.stress,        "Stress");
+            result = result & this.grateThanZero(this.tension.runoutcycles,  "Run Out Cycles");
+            result = result & this.grateThanZero(this.tension.runouttime,    "Run Out Time");
+            // result = result & this.mustBeNumeric(this.tension.description,   "Description");
+            // result = result & this.mustBeNumeric(this.tension.pic1,          "Pic1");
+            // result = result & this.mustBeNumeric(this.tension.pic2,          "Pic2");
+            // result = result & this.mustBeNumeric(this.tension.pic3,          "Pic3");
+            result = result & this.grateThanZero(this.tension.ktfactor,     "Kf Factor");
+            result = result & this.mustBeNumeric(this.tension.ampload, "Amp Load");
+            result = result & this.mustBeNumeric(this.tension.ratioofload, "Ratio Of Load");
+
             return result;
           },
-          checkSpc: function (e) {            
+          checkTension: function (e) {            
             this.errors = [];
             if (this.completedForm() == true) {
-              // console.log(this.spc);
+              console.log(this.tension);
               axios
-              .post('/newspc', this.spc)
+              .post('/newtns', this.tension)
               .then(res => {
-                // console.log(res.data);
+                console.log(res.data);
                 if (res.data.message == "ok") {
-                  alert("Ok! A new specimen was created");
+                  alert("Ok! A new test was created");
                 } else {
-                  alert("an error was occured");
+                  alert("An Error Occured");
                 }
               }).catch(function (err) {
                 console.log(err);
-                alert("an error was occured");
+                alert("An Error Occured");
               });
             }
             e.preventDefault();
           },
-          resetSpc: function(e) {
+          resetTension: function(e) {
             this.errors = [];
-            this.spc.sid = 0;
-            this.spc.sname = "";
-            this.spc.radius = 0;
-            this.spc.length = 0;
-            this.spc.mid = 0;
-            this.spc.memo = "";
+            this.tension.tension_id    = 0;
+            this.tension.sname         = "";
+            this.tension.mid           = 0;
+            this.tension.diameter      = 0;
+            this.tension.meanload      = 0;
+            this.tension.maxload       = 0;
+            this.tension.FatigueLifeNf = 0;
+            this.tension.FracturedLocs = 0;
+            this.tension.ktfactor      = 0;
+            this.tension.ampload       = 0;
+            this.tension.ratioofload   = 0;
+            this.tension.runoutcycles  = 0;
+            this.tension.runouttime    = 0;
+            this.tension.description   = "";
+            this.tension.pic1          = "";
+            this.tension.pic2          = "";
+            this.tension.pic3          = "";
             e.preventDefault();
+          },
+          calStress: function() {
           }
         },
         mounted() {
@@ -397,7 +495,67 @@
         },
         delimiters: ['[[',']]']
       });
-    </script>
 
+      $(document).ready(function()
+      {
+          var settings_1 = {
+              url: "/uptension",
+              method: "POST",
+              allowedTypes:"jpg,png,gif",
+              fileName: "myfile",
+              multiple: false,
+              onSuccess:function(files,data,xhr)
+              {
+                newtns.tension.pic1 = files[0];
+                $("#status_1").html("<font color='green'>Upload " + files[0] + " is success</font>");
+              },
+              onError: function(files,status,errMsg)
+              {       
+                newtns.tension.pic1 = "";
+                $("#status_1").html("<font color='red'>Upload " + files[0] + " is Failed</font>");
+              }
+          }
+
+          var settings_2 = {
+              url: "/uptension",
+              method: "POST",
+              allowedTypes:"jpg,png,gif",
+              fileName: "myfile",
+              multiple: false,
+              onSuccess:function(files,data,xhr)
+              {
+                newtns.tension.pic2 = files[0];
+                $("#status_2").html("<font color='green'>Upload " + files[0] + " is success</font>");
+              },
+              onError: function(files,status,errMsg)
+              {       
+                newtns.tension.pic2 = "";
+                $("#status_2").html("<font color='red'>Upload " + files[0] + " is Failed</font>");
+              }
+          }
+
+          var settings_3 = {
+              url: "/uptension",
+              method: "POST",
+              allowedTypes:"jpg,png,gif",
+              fileName: "myfile",
+              multiple: false,
+              onSuccess:function(files,data,xhr)
+              {
+                newtns.tension.pic3 = files[0];
+                $("#status_3").html("<font color='green'>Upload " + newtns.tension.pic3 + " is success</font>");
+              },
+              onError: function(files,status,errMsg)
+              {
+                newtns.tension.pic3 = "";
+                $("#status_3").html("<font color='red'>Upload " + files[0] + " is Failed</font>");
+              }
+          }
+
+          $("#upload_pic1").uploadFile(settings_1);
+          $("#upload_pic2").uploadFile(settings_2);
+          $("#upload_pic3").uploadFile(settings_3);
+      });
+    </script>
   </body>
 </html>
