--- a/templates/tooth/modify.html
+++ b/templates/tooth/modify.html
@@ -362,7 +362,7 @@
                 if (res.data.message == "ok")
                   alert("Ok! The specimen was modified");
                 else
-                  alert("An error was occured");
+                  alert("An Error Occured");
               }).catch(function (err) {
                 console.log(err);
                 alert("bad");
