--- a/templates/tooth/new.html
+++ b/templates/tooth/new.html
@@ -363,11 +363,11 @@
                 if (res.data.message == "ok") {
                   alert("Ok! A new specimen was created");
                 } else {
-                  alert("an error was occured");
+                  alert("An Error Occured");
                 }
               }).catch(function (err) {
                 console.log(err);
-                alert("an error was occured");
+                alert("An Error Occured");
               });
             }
             e.preventDefault();
